implement home page for white board

--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -1,11 +1,13 @@
 <div class="container-fluid">
     <h1>
-      White Board
+      Welcome to White Board! :D 
     </h1>
   
-    <a routerLink="/login">Login</a>
-    <a routerLink="/register">Register</a>
-    <a routerLink="/quizzes">Quizzes</a>
+    <div class="home-page-links">
+      <a routerLink="/login">Login</a>
+      <a routerLink="/register">Register</a>
+      <a routerLink="/quizzes">Quizzes</a>
+    </div>
   
-    <!-- <app-course-grid></app-course-grid> -->
+    <app-course-grid></app-course-grid>
   </div>
