added error message css

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -15,3 +15,10 @@ button {
 a {
     padding: 30px;
 }
+
+.invalid-username-message,
+.invalid-password-message
+ {
+    color: red;
+    padding-left: 30px;
+}
