connected admin to profile page

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,12 @@
-<p>
-  admin works!
-</p>
+
+<div class="container-fluid">
+  <h1>Welcome Admin!</h1>
+
+
+
+  <app-course-grid></app-course-grid>
+  <a (click)="logout()">Logout</a>
+  <a routerLink="/profile">Profile</a>
+  <a routerLink="/home">Home</a>
+
+</div>
