--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -36,5 +36,6 @@
 
   <a (click)="logout()">Logout</a>
   <a routerLink="/home">Home</a>
+  <a [hidden]=!isAdmin routerLink="/admin">Admin Page</a>
 
 </div>
