added admin sections component

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
 
 
 
-  <app-course-grid></app-course-grid>
+  <app-admin-course></app-admin-course>
   <a (click)="logout()">Logout</a>
   <a routerLink="/profile">Profile</a>
   <a routerLink="/home">Home</a>
