--- a/src/app/admin-course/admin-course.component.html
+++ b/src/app/admin-course/admin-course.component.html
@@ -1,3 +1,14 @@
-<p>
-  admin-course works!
-</p>
+<h2>Courses: {{courses.length}}</h2>
+
+<div class="row">
+  <div *ngFor="let course of courses" class="col-sm-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{course.title}}</h5>
+        <p class="card-text"></p>
+        <a routerLink="/course/{{course.id}}/section/admin"
+           class="btn btn-primary view-btn">View Sections</a>
+      </div>
+    </div>
+  </div>
+</div>
