--- a/src/app/admin-course/admin-course.component.html
+++ b/src/app/admin-course/admin-course.component.html
@@ -1,7 +1,7 @@
 <h2>Courses: {{courses.length}}</h2>
 
 <div class="row">
-  <div *ngFor="let course of courses" class="col-sm-3">
+  <div *ngFor="let course of courses" class="course-row col-sm-3">
       <h5 class="card-title">{{course.title}}</h5>
       <app-admin-section [courseId]="course.id"></app-admin-section>
     <!-- <div class="card">
