--- a/src/app/course-viewer/course-viewer.component.html
+++ b/src/app/course-viewer/course-viewer.component.html
@@ -1,3 +1,5 @@
-<p>
-  course-viewer works!
-</p>
+
+<div class="container-fluid">
+    <h2>{{course.title}}</h2>
+    <!-- <app-module-list></app-module-list> -->
+  </div>
