--- a/src/app/modules/modules.component.html
+++ b/src/app/modules/modules.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-4">
       <ul class="list-group">
-        <li class="list-group-item active">Modules</li>
+        <h3>Modules</h3>
+        <!-- <li class="list-group-item">Modules</li> -->
         <li [ngClass]="{'active': module.id == moduleId}" *ngFor="let module of modules"
             class="list-group-item wbdv">
-          <a routerLink="/course/{{courseId}}/module/{{module.id}}">
+          <a class="course-title" routerLink="/course/{{courseId}}/module/{{module.id}}">
             {{module.title}}</a>
         </li>
       </ul>
