--- a/src/app/widgets/widgets.component.html
+++ b/src/app/widgets/widgets.component.html
@@ -1,7 +1,8 @@
 
-<div *ngFor="let widget of widgets">
+<div class="widgets-list">
+<div class="widgets" *ngFor="let widget of widgets">
     <div [ngSwitch]="widget.widgetType">
-      <div *ngSwitchCase="'HeadingWidget'">
+      <div *ngSwitchCase="'Heading'">
         <div [ngSwitch]="widget.size">
           <h1 *ngSwitchCase="'1'">{{widget.text}}</h1>
           <h2 *ngSwitchCase="'2'">{{widget.text}}</h2>
@@ -11,20 +12,28 @@
           <h6 *ngSwitchCase="'6'">{{widget.text}}</h6>
         </div>
       </div>
-      <div *ngSwitchCase="'LinkWidget'">
-        <a href="{{widget.href}}">{{widget.text}}</a>
+      <div *ngSwitchCase="'Link'">
+        <a href="{{widget.href}}" target="_blank">{{widget.text}}</a>
       </div>
       <div *ngSwitchCase="'Paragraph'">
         <div>{{widget.text}}</div>
       </div>
-      <div *ngSwitchCase="'ListWidget'">
-        <h1>ListWidget</h1>
-        <ul class="list-group">
-          <li class="list-group-item"
-              *ngFor="let item of widget.items.split('|')">
+      <div *ngSwitchCase="'List'">
+        <div>List: </div>
+        <ul *ngIf="widget.listType == 'Unordered'" class="list-group">
+          <li *ngFor="let item of widget.listItem.split(' ')">
             {{item}}
           </li>
         </ul>
+        <ol *ngIf="widget.listType == 'Ordered'" class="list-group">
+            <li *ngFor="let item of widget.listItem.split(' ')">
+              {{item}}
+            </li>
+          </ol>
+      </div>
+      <div *ngSwitchCase="'Image'">
+          <img src="{{widget.src}}" alt="pic" />
       </div>
     </div>
   </div>
+</div>
