--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -25,14 +25,14 @@
     Update
   </button>
 
-  <!-- <h2>Sections ({{sections.length}})</h2>
+  <h2>Sections ({{sections.length}})</h2>
 
   <ul class="list-group">
     <li *ngFor="let enrollment of sections" class="list-group-item">
       {{enrollment.section.name}}
       ({{enrollment.section.seats}})
     </li>
-  </ul> -->
+  </ul>
 
   <a (click)="logout()">Logout</a>
   <a routerLink="/home">Home</a>
