linked profile page to courses page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,6 +39,7 @@
 
   <a (click)="logout()">Logout</a>
   <a routerLink="/home">Home</a>
+  <a routerLink="/courses">Courses</a>
   <a [hidden]=!isAdmin routerLink="/admin">Admin Page</a>
 
 </div>
