added default section name

--- a/src/app/admin-section/admin-section.component.html
+++ b/src/app/admin-section/admin-section.component.html
@@ -15,8 +15,7 @@
   <div class="row">
       <div class="create-section">Create a New Section:</div>
       <input [(ngModel)]="newSectionName"
-        placeholder="New Section Name"
-        class="form-control new-section"/>
+        placeholder="New Section Name" class="form-control new-section"/>
       <input [(ngModel)]="newSeatNumber"
         placeholder="New Seat Number"
         class="form-control new-section"/>
