--- a/src/app/admin-course/admin-course.component.html
+++ b/src/app/admin-course/admin-course.component.html
@@ -3,14 +3,6 @@
 <div class="row">
   <div *ngFor="let course of courses" class="course-row col-sm-3">
       <h5 class="card-title">{{course.title}}</h5>
-      <app-admin-section [courseId]="course.id"></app-admin-section>
-    <!-- <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{course.title}}</h5>
-        <p class="card-text"></p>
-        <a routerLink="/course/{{course.id}}/section/admin"
-           class="btn btn-primary view-btn">View Sections</a>
-      </div>
-    </div> -->
+      <app-admin-section [courseTitle]="course.title" [courseId]="course.id"></app-admin-section>
   </div>
 </div>
