--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -26,20 +26,22 @@
   </button>
 
   <div *ngIf="user.username != 'admin'">
-    <h2>Courses ({{courses.length}})</h2>
+    <h2>Courses</h2>
     <ul class="list-group">
         <li *ngFor="let courses of courses" class="list-group-item">
           {{courses.title}}
         </li>
       </ul>
 
-    <h2>Sections ({{sections.length}})</h2>
+    <h2>Sections</h2>
 
     <ul class="list-group">
       <li *ngFor="let enrollment of sections" class="list-group-item section-item">
-        {{enrollment.section.name}}
-        ({{enrollment.section.seats}})
-        <button (click)="unenroll(enrollment.section._id, enrollment)" class="btn btn-danger">Unenroll</button>
+        <div *ngIf="enrollment.section">
+            {{enrollment.section.name}}
+            ({{enrollment.section.seats}})
+            <button (click)="unenroll(enrollment.section._id, enrollment)" class="btn btn-danger">Unenroll</button>
+        </div>
       </li>
     </ul>
   </div>
