Added profile link on home page

--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -6,7 +6,7 @@
     <div class="home-page-links">
       <a routerLink="/login">Login</a>
       <a routerLink="/register">Register</a>
-      <a routerLink="/quizzes">Quizzes</a>
+      <a routerLink="/profile">Profile</a>
     </div>
   
     <app-course-grid></app-course-grid>
