--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -24,6 +24,10 @@
           class="btn btn-primary btn-block">
     Update
   </button>
+  <button (click)="deleteAccount()"
+          class="btn btn-danger delete-btn btn-block">
+    Delete your Account
+  </button>
 
   <div *ngIf="user.username != 'admin'">
     <h2>Courses</h2>
@@ -40,7 +44,7 @@
         <div *ngIf="enrollment.section">
             {{enrollment.section.name}}
             ({{enrollment.section.seats}})
-            <button (click)="unenroll(enrollment.section._id, enrollment)" class="btn btn-danger">Unenroll</button>
+            <button (click)="unenroll(enrollment.section._id, enrollment)" class="btn btn-danger unenroll-btn">Unenroll</button>
         </div>
       </li>
     </ul>
