added course name for sections page

--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h1>Sections available ({{sections.length}}): </h1>
+    <h1>Sections available ({{sections.length}}) for {{courseTitle}}: </h1>
 
     <ul class="list-group">
         <li *ngFor="let section of sections" class="list-group-item">
@@ -9,4 +9,4 @@
                   class="float-right btn btn-primary enroll-btn">Enroll</button>
         </li>
     </ul>
-  </div>
+  </div> 
