--- a/src/app/course-grid/course-grid.component.html
+++ b/src/app/course-grid/course-grid.component.html
@@ -1,3 +1,21 @@
+<div *ngIf="currentCourses.length">
+  <h2>Currently Enrolled in Courses:</h2>
+  <div class="row">
+      <div *ngFor="let course of currentCourses" class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{course.title}}</h5>
+              <p class="card-text"></p>
+              <a routerLink="/course/{{course.id}}"
+                 class="btn btn-primary view-btn">View</a>
+              <a routerLink="/course/{{course.id}}/section"
+                 class="btn btn-primary">Enroll</a>
+            </div>
+          </div>
+        </div>
+  </div>
+</div>
+
 <h2>Course Available: {{courses.length}}</h2>
 
 <div class="row">
