fix profile page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,22 +2,22 @@
 <div class="container-fluid">
   <h1>Profile</h1>
 
-  <input value="user.username"
+  <input [(ngModel)]="user.username || ''"
          placeholder="username"
          class="form-control"/>
-  <input value="user.firstName"
+  <input [(ngModel)]="user.firstName || ''"
          placeholder="first name"
          class="form-control"/>
-  <input value="user.lastName"
+  <input [(ngModel)]="user.lastName || ''"
          placeholder="last name"
          class="form-control"/>
-  <input value="user.email"
+  <input [(ngModel)]="user.email || ''"
          placeholder="email"
          class="form-control"/>
-  <input value="user.phoneNumber"
+  <input [(ngModel)]="user.phoneNumber || ''"
          placeholder="phone number"
          class="form-control"/>
-  <input value="user.address"
+  <input [(ngModel)]="user.address || ''"
          placeholder="address"
          class="form-control"/>
   <button (click)="update()"
