--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-  <h1>Profile</h1>
+  <!-- <h1>Profile</h1>
 
   <input [(ngModel)]="user.username || ''"
          placeholder="username"
@@ -53,6 +53,6 @@
   <a (click)="logout()">Logout</a>
   <a routerLink="/home">Home</a>
   <a routerLink="/courses">Courses</a>
-  <a [hidden]=!isAdmin routerLink="/admin">Admin Page</a>
+  <a [hidden]=!isAdmin routerLink="/admin">Admin Page</a> -->
 
 </div>
