--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div *ngIf="user" class="container-fluid">
   <h1>Profile</h1>
 
   <input [(ngModel)]="user.username"
