--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -7,6 +7,7 @@
       <a routerLink="/login">Login</a>
       <a routerLink="/register">Register</a>
       <a routerLink="/profile">Profile</a>
+      <a routerLink="/quizzes">Quizzes</a>
     </div>
     
     <app-course-grid></app-course-grid>
