Added submit and cancel buttom in quiz taker

--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -36,4 +36,6 @@
     </li>
   </ul>
 
+  <button class="btn btn-success" (click)="submit()">Submit</button>
+  <button routerLink="/quizzes" class="btn btn-danger">Cancel</button>
 </div>
