Added quiz submission view

--- a/src/app/quiz-list/quiz-list.component.html
+++ b/src/app/quiz-list/quiz-list.component.html
@@ -8,5 +8,7 @@
       <a routerLink="/quiz/{{quiz._id}}" class="btn btn-success float-right">Take</a>
     </li>
   </ul>
-
+  
+  <a routerLink="/home">Home</a>
+  <a routerLink="/courses">Courses</a>
 </div>
