--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -38,4 +38,9 @@
 
   <button class="btn btn-success" (click)="submit()">Submit</button>
   <button routerLink="/quizzes" class="btn btn-danger">Cancel</button>
+
+
+  <a routerLink="/home">Home</a>
+  <a routerLink="/courses">Courses</a>
+  <a routerLink="/quizzes">Quizzes</a>
 </div>
