--- a/src/app/quiz-list/quiz-list.component.html
+++ b/src/app/quiz-list/quiz-list.component.html
@@ -5,10 +5,10 @@
     <li *ngFor="let quiz of quizzes" class="list-group-item">
       {{quiz.name}}
       <a routerLink="/quiz/{{quiz._id}}/submissions" class="btn btn-info float-right">Submissions</a>
-      <a routerLink="/quiz/{{quiz._id}}" class="btn btn-success float-right">Take</a>
+      <a routerLink="/quiz/{{quiz._id}}" class="btn btn-success float-right btn-take">Take</a>
     </li>
   </ul>
   
-  <a routerLink="/home">Home</a>
+  <a class="home-link" routerLink="/home">Home</a>
   <a routerLink="/courses">Courses</a>
 </div>
